# DiscountedFutureCahsflowBondsStellar

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  CONVERSION_NOTES.md  Cargo.toml  DEPLOYMENT_GUIDE.md  FRONTEND_GUIDE.md  IMPLEMENTATION_SUMMARY.md  Makefile  NEW_ARCHITECTURE.md  QUICKSTART.md  QUICK_DEPLOY.md  README.md  TESTNET_DEPLOYMENT.md  TEST_SUMMARY.md  TROUBLESHOOTING.md  deployed-contracts.env
.claude/: settings.local.json
contracts/amm_pool/: Cargo.toml
contracts/amm_pool/src/: lib.rs
contracts/oracle/: Cargo.toml
contracts/oracle/src/: lib.rs
contracts/primary_market/: Cargo.toml
contracts/primary_market/src/: lib.rs
contracts/stabilizer/: Cargo.toml
contracts/stabilizer/src/: lib.rs
contracts/token/: Cargo.toml
contracts/token/src/: lib.rs
frontend/: .env.example  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Header.tsx  LiquidNodes.tsx  LiquidityManager.tsx  OracleInfo.tsx  OracleManager.tsx  SwapInterface.tsx  Tabs.tsx  (+1 more)
scripts/: deploy-and-test.sh  deploy-local.sh  deploy-testnet.sh  detailed-test.sh  diagnose.sh  initialize-contracts.sh  setup-frontend.sh  simple-deploy.sh  test-liquid-node-scenario.sh
tests/: Cargo.toml  amm_pool_e2e.rs  simple_e2e.rs
tests/test_snapshots/: test_basic_buy_sell_lifecycle.1.json  test_e2e_complete_lifecycle.1.json  test_liquid_node_intervention.1.json  test_multiple_users.1.json  test_multiple_users_concurrent.1.json  test_operator_revenue.1.json  test_penalty_calculations.1.json  test_penalty_tiers.1.json
(+14 files in other folders)
