[workspace]
resolver = "2"

members = [
    "contracts/token",
    "contracts/oracle",
    "contracts/primary_market",
    "contracts/amm_pool",
    "contracts/stabilizer",
    "tests",
]

[workspace.dependencies]
soroban-sdk = "23.0.2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
